--- a/project_zobo/project_zobo/templates/LoanStatus.html
+++ b/project_zobo/project_zobo/templates/LoanStatus.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <img anima-src="{%static '/img/razer-logo-18@1x.png' %}" class="razer-logo-d089705e-2c2f-42b9-9bbe-31014782dfb7-AExRF6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                <a href="myaccount.html">
+                <a href="myaccount">
                     <div class="group-100-6e899c44-2d34-4d56-ad90-a19d00ed64f1-YAIhnA anima-flexbox-container">
                         <div class="auto-flex-9KUpiT anima-flexbox-container">
                             <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-e73c048e-dc18-4596-aad5-de390774aaed-fKY0Sq" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
@@ -49,7 +49,7 @@
                                 <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-1ac4467d-b306-41ad-9fda-a5f1d0ea410a-H1FJQQ anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </div>
                         </div>
-                        <a href="dashboard.html">
+                        <a href="dashboard">
                             <div class="return-to-dashboard-1853442a-1897-42f1-b810-22276216c1bb-S7Dxiv font-class-1">
                                 Return to Dashboard
                             </div>
@@ -78,7 +78,7 @@
                         <div class="student-loan-ac9cfc16-57ca-42e5-ae02-5048269c4aaa-h9fLJ4 font-class-1">
                             STUDENT LOAN
                         </div>
-                        <a href="loanapproved.html">
+                        <a href="loanapproved">
                             <div class="pending-8b4dfa20-8c94-4515-9d64-e1075a444702-r2VsxT font-class-1">
                                 PENDING
                             </div>
