--- a/project_zobo/project_zobo/templates/LoanSubmit.html
+++ b/project_zobo/project_zobo/templates/LoanSubmit.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="group-100-ae996563-ce7b-40e9-9a7e-cc9eda580398-N4rDFx anima-flexbox-container">
                         <div class="auto-flex2-h8iOFN anima-flexbox-container">
-                            <a href="myaccount.html">
+                            <a href="myaccount">
                                 <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-48220a29-e458-4970-bde5-061229380325-fsHP5g" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </a>
                             <div class="chrislim63-f967499c-cf57-4038-be5e-1a1d8f2365fa-GEfWat font-class-1">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="auto-flex3-oxA9X0 anima-flexbox-container">
-                        <a href="dashboard.html">
+                        <a href="dashboard">
                             <div class="group-87-b7010237-ebac-43d7-ab15-9b92130d3864-7NAWO4">
                                 <img anima-src="{%static '/img/rectangle-105-10@1x.png' %}" class="rectangle-105-63ac0f74-c884-40fa-bd2b-e9be4cec105f-XLHTGz" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                                 <div class="return-to-dashboard-82546bbc-86aa-40b2-ab16-f2cf8cd5ec5a-QGEVGp font-class-1">
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="loanstatus.html">
+                        <a href="loanstatus">
                             <div class="group-82-e329f9c5-26be-49e4-be63-fb2cd84cac8f-uUkW8z">
                                 <img anima-src="{%static '/img/rectangle-105-9@1x.png' %}" class="rectangle-105-be46a976-d10e-4da9-8a3a-bb9d3db27787-njwi7s" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                                 <div class="check-loan-status-4c6318c5-2feb-4fb9-97c3-0cf98c1f47b9-ZVRIjP font-class-1">
