--- a/project_zobo/project_zobo/templates/Register.html
+++ b/project_zobo/project_zobo/templates/Register.html
@@ -14,10 +14,10 @@
         <div class="anima-container-center-horizontal">
             <div class="register anima-flexbox-container anima-screen ">
                 <div class="auto-flex-1lKxzb anima-flexbox-container">
-                    <a class="align-self-flex-end" href="homepage.html">
+                    <a class="align-self-flex-end" href="homepage">
                         <img anima-src="{%static '/img/razer-logo-10@1x.png' %}" class="razer-logo-67438f06-6633-4fbc-80bd-faf01fe605fd-7gIHtB" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
-                    <a href="homepage.html">
+                    <a href="homepage">
                         <div class="group-10-c7bc3bdf-4e5e-4d17-af01-e763e498fb9c-yI9WbH anima-flexbox-container">
                             <div class="discover-5026afc0-764d-4c7a-b556-1be9fcfc8754-ef75Q1 font-class-1">
                                 Discover
@@ -47,7 +47,7 @@
                     <div class="register-4b3f0f40-a052-42f9-80a5-c2a033696400-yP2Qia font-class-1">
                         REGISTER
                     </div>
-                    <a href="login.html">
+                    <a href="login">
                         <div class="log-in-cd8400d6-d514-45fd-9c70-466871bbbe92-mT0vLI font-class-1">
                             LOG IN
                         </div>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="registersuccess.html">
+                    <a href="registersuccess">
                         <div class="buttons-contained-enabled-f3e16a7e-ff08-4729-8f96-52eb9aea5504-9HDUaL anima-smart-layers-pointers ">
                             <img anima-src="{%static '/img/rectangle-377-1@1x.png' %}" class="rectangle-377-defe4b2d-820d-4e0b-a08c-65c10cc662ba-zTWDVX" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             <div class="register-11f2fd07-92ec-4467-bcbc-691571d15d8e-BAoaDn font-class-5">
