--- a/project_zobo/project_zobo/templates/aboutloan.html
+++ b/project_zobo/project_zobo/templates/aboutloan.html
@@ -19,7 +19,7 @@
                         <div class="down-icon-7c59294f-ba75-466b-b1b6-7d120ec8ca31-YInWON anima-smart-layers-pointers ">
                             <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-e4e0c765-da4d-45f1-a80b-b22b24b27f6f-eNxqgP anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </div>
-                        <a href="myaccount.html">
+                        <a href="myaccount">
                             <div class="return-to-dashboard-243b46c4-dfa6-4aef-a6c4-c4ab3f86eb4c-IvVw8d font-class-1">
                                 Return to Dashboard
                             </div>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="group-100-737ec5df-14a3-47b9-944d-b44d9ceb7c50-rbvWC1 anima-flexbox-container">
                         <div class="auto-flex1-PVjSxv anima-flexbox-container">
-                            <a href="myaccount.html">
+                            <a href="myaccount">
                                 <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-a28b5979-80ce-4b47-92ff-640efb70add8-9vhwPg" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </a>
                             <div class="chrislim63-604020ce-8e6f-4af7-89b5-79974098b6b0-0uFLbv font-class-1">
@@ -84,7 +84,7 @@
                             <div class="rectangle-37-8f2922ea-dba8-404b-9731-56ac388dd2ff-Ug470D">
                             </div>
                         </div>
-                        <a href="loanapplication.html">
+                        <a href="loanapplication">
                             <div class="group-12-f3f0d6b6-763f-423c-9510-9642e40c74a7-ajzDNc anima-flexbox-container">
                                 <div class="group-85-105ca4b5-f06b-4b30-944c-a4a62f28c4b8-76qXpr anima-flexbox-container">
                                     <div class="overlap-group1-KcvdVN">
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="loanapplication.html">
+                        <a href="loanapplication">
                             <img anima-src="{%static '/img/download@1x.png' %}" class="download-31f7ab62-47a9-4b84-9db2-3898335b35d9-uGxyaC" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </a>
                         <div class="how-to-apply-3-simple-steps-1-find-a-guarantor-2-apply-loan-online-3-start-repaying-guarantor-requirements-upload-the-following-details-to-razer-bank-1-aged-from-21-to-60-years-old-2-must-not-be-bankrupted-08187aaf-744c-4bed-837a-05d45d703161-ZPmLTc font-class-1">
