--- a/project_zobo/project_zobo/templates/aboutopenaccount.html
+++ b/project_zobo/project_zobo/templates/aboutopenaccount.html
@@ -19,7 +19,7 @@
                         <div class="down-icon-98237ac3-e542-4473-b420-d2ec3434a016-X9sz9x anima-smart-layers-pointers ">
                             <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-942c88df-c2af-4ad1-b1d1-c575e9a383cd-5BxQD3 anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </div>
-                        <a href="dashboard.html">
+                        <a href="dashboard">
                             <div class="return-to-dashboard-58434b0c-2d30-4f57-8c82-70f1f2d74eef-IX44gN font-class-1">
                                 Return to Dashboard
                             </div>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="group-100-9fd4f6c0-62c6-4ba5-afcd-558ac19f279d-wIslSw anima-flexbox-container">
                         <div class="auto-flex1-a1Q0QQ anima-flexbox-container">
-                            <a href="myaccount.html">
+                            <a href="myaccount">
                                 <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-4963236f-3df8-4f20-9ed7-358ed3e8e932-Z7Qwkj" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </a>
                             <div class="chrislim63-4553af1d-4bd7-49bc-9863-63ae15f14173-PF8PVh font-class-1">
@@ -61,7 +61,7 @@
                         <div class="surface-d4d012d4-3e0d-4b9d-873b-322e4cbbd595-dxhxKE">
                         </div>
                         <div class="savings-account-0bb68ac0-770b-44d3-b165-16fffeda0df5-5KhRZs font-class-1">
-                            Savings Account
+                            Current Account
                         </div>
                     </div>
                     <div class="down-icon-812083b6-fc99-4485-9ee3-88b124feb4db-srsNt6">
@@ -78,7 +78,7 @@
                     <div class="lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-f52e7575-cf07-4daf-a3fd-f9e2d079c655-qb7jFm font-class-1">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
                     </div>
-                    <a href="openaccountapplication.html">
+                    <a href="openaccountapplication">
                         <div class="group-12-99c6c2db-85e3-4eaf-85f7-efd92c1ddfee-A4BFvI anima-flexbox-container">
                             <div class="group-85-0f138634-94f9-4867-a2e1-a161baa694bb-PU9x0f anima-flexbox-container">
                                 <div class="overlap-group-17gSzi">
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="openaccountapplication.html">
+                    <a href="openaccountapplication">
                         <img anima-src="{%static '/img/download-1@1x.png' %}" class="download-9f1347a2-562c-4259-9bbb-b729efe8bf01-LjSg62" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
                 </div>
