--- a/project_zobo/project_zobo/templates/lettersigned.html
+++ b/project_zobo/project_zobo/templates/lettersigned.html
@@ -1,100 +1,105 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {% load static %}<link href="{%static '/img/favicon.png' %}" rel="shortcut icon"/>
+        {% load static %}<link href="{% static 'img/favicon.png' %}" rel="shortcut icon"/>
         <meta charset="utf-8"/>
         <meta content="width=1440, maximum-scale=1.0" name="viewport"/>
-        <link href="{%static '/css/loanapproved.css'%}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/lettersigned.css' %}" rel="stylesheet" type="text/css"/>
         <meta content="AnimaApp.com - Design to code, Automated." name="author">
         </meta>
     </head>
     <body style="margin: 0;
  background: rgba(255, 255, 255, 1.0);">
-        <input id="anPageName" name="page" type="hidden" value="loanapproved"/>
+        <input id="anPageName" name="page" type="hidden" value="lettersigned"/>
         <div class="anima-container-center-horizontal">
-            <div class="loanapproved anima-screen ">
-                <div class="group-10-df1313f4-37dc-45ea-901a-38f78ff489d3-Mmj5JE anima-flexbox-container">
-                    <div class="discover-70bbd2c6-78d5-4cc0-9068-6df1429ae0b5-0dRXpG font-class-1">
+            <div class="lettersigned anima-screen ">
+                <div class="group-10-36535ad8-2ec1-49d8-ab5a-8c536159cb61-kbx7IG anima-flexbox-container">
+                    <div class="discover-8d0f6fc3-407a-4264-86f8-4cc6fbc0f658-flkUwX font-class-1">
                         Discover
                     </div>
-                    <div class="services-5c66239a-9327-493d-80a2-3bc586ee91fe-uslKuz font-class-1">
+                    <div class="services-66ccf5ab-b195-4bcc-829c-d2a5049c4ead-3RQL3N font-class-1">
                         Services
                     </div>
-                    <div class="apply-9661747b-c926-4c0e-bc8a-0d23ae299913-fkIItp font-class-1">
+                    <div class="apply-053a9452-7038-40e6-8ab3-e418c45ede9f-geM8Xx font-class-1">
                         Apply
                     </div>
-                    <div class="contact-a3e5c9d2-4975-4481-9f36-840fba6d2f34-Yf6MVf font-class-1">
+                    <div class="contact-ecf99758-481e-410b-818c-a986e84be49b-x8Z5X5 font-class-1">
                         Contact
                     </div>
                 </div>
-                <img anima-src="{%static '/img/razer-logo-10@1x.png' %}" class="razer-logo-e159e523-d7ea-4fc1-acd5-f76e945cc8c5-Ctaigi" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                <div class="group-100-d2124fe0-8e4a-426a-92df-0469fec0f7a5-XpzJ27 anima-flexbox-container">
-                    <div class="auto-flex-KttiS9 anima-flexbox-container">
+                <img anima-src="{% static 'img/razer-logo-10@1x.png' %}" class="razer-logo-92fdbc78-a4eb-4bc8-8b67-9b92cb352ee0-B1hyiL" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                <div class="group-100-53dd6158-10a0-48b6-adba-e8b4a3413801-QChEje anima-flexbox-container">
+                    <div class="auto-flex-DHXX2C anima-flexbox-container">
                         <a href="myaccount.html">
-                            <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-e27ee703-31ca-41da-a419-78bf92c0194e-xB9iQL" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                            <img anima-src="{% static 'img/ellipse-17-10@1x.png' %}" class="ellipse-17-4b106f50-ce6d-4193-b633-9d4f2ef50efc-pcL8Mv" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </a>
-                        <div class="chrislim63-e607861e-e906-49db-a55b-e03696bc1ff8-c3xHmE font-class-1">
+                        <div class="chrislim63-d788eed0-1539-4191-86a4-ea7d8e7bb981-yDYk4W font-class-1">
                             CHRISLIM63
                         </div>
                     </div>
-                    <div class="log-out-fdbe8ed4-4263-4ac6-b656-a36305b2b89f-rCqVkE font-class-1">
+                    <a href="homepage"><div class="log-out-828cd9ff-5093-4a91-bd38-b9e6f25824c9-3swMxR font-class-1">
                         LOG OUT
-                    </div>
+                    </div></a>
                 </div>
-                <img anima-src="{%static '/img/rectangle-43-9@1x.png' %}" class="rectangle-43-125d0984-6757-4db6-9608-624a7e13ebd4-YxEiF5" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                <div class="group-98-53f96813-7635-47a5-80d6-fbeebb224dc6-jQoknW anima-flexbox-container">
-                    <div class="auto-flex1-WWT2k0 anima-flexbox-container">
-                        <div class="group-86-f44c9013-4ab8-4e39-9517-dfc74e81b0fa-oX6I3o anima-smart-layers-pointers ">
-                            <div class="down-icon-d8f00923-67b7-4ccd-aada-b71d88bc7be6-QB4F8w anima-flexbox-container">
-                                <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-0c26b311-bb1f-48e6-9c1e-1b8fe2750529-K6Jam0 anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                <img anima-src="{% static 'img/rectangle-43-12@1x.png' %}" class="rectangle-43-339eae8d-d452-4316-80c0-42dcdab0cc40-ZTg0FL" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                <div class="group-98-0bed285e-059e-47c8-aa46-169169fdf54d-lTZ9gD anima-flexbox-container">
+                    <div class="auto-flex1-qZUbvx anima-flexbox-container">
+                        <div class="group-86-630e7391-8c03-43e8-9fee-a03bdb6a952b-XCaeNY anima-smart-layers-pointers ">
+                            <div class="down-icon-1276ec21-78d5-40d2-864b-746c78f61073-PtPxSh anima-flexbox-container">
+                                <img anima-src="{% static 'img/bx-chevron-down-21@1x.png' %}" class="bx-chevron-down-0c683f82-1dc4-4044-a505-00f17d2826b3-ZPgAyJ anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </div>
                         </div>
                         <a href="dashboard.html">
-                            <div class="return-to-dashboard-5f8f4de0-5b9c-469e-b9ca-80fd1b65d602-SH7hMc font-class-1">
+                            <div class="return-to-dashboard-bb98ded3-0963-4220-aea9-8ac3086b09e6-31uvxU font-class-1">
                                 Return to Dashboard
                             </div>
                         </a>
                     </div>
-                    <div class="overlap-group-HuuI6F">
-                        <div class="application-id-5eb8f88a-4d5d-412c-86ea-3a4215f31645-0TVDuH font-class-1">
+                    <div class="overlap-group-rZqhBo">
+                        <div class="application-id-723e2f89-bc9e-4820-a22a-426cee203191-CPMzu9 font-class-1">
                             Application ID
                         </div>
-                        <div class="date-of-application-4bffaab5-49db-4fe9-b9df-2144c88c096c-aHthjx font-class-1">
+                        <div class="date-of-application-1c1322a1-85ce-48de-80be-4b8c20046b9e-BRviLq font-class-1">
                             Date of Application
                         </div>
-                        <div class="type-of-loan-fb1139cf-06d6-4529-8b55-9888c8e03d10-j2BFiY font-class-1">
+                        <div class="type-of-loan-0b42f1f6-9b31-4db7-be1b-b3503738f187-iiC0Eu font-class-1">
                             Type of Loan
                         </div>
-                        <div class="status-a9b0de79-423b-4eb7-ad2a-9b7929feff9a-gHx9eN font-class-1">
+                        <div class="status-6e5af987-a479-42c9-adbc-d0f7e8fb5134-dFYt6q font-class-1">
                             Status
                         </div>
-                        <div class="a2551441291-6d8a2fa6-a5cc-430e-9fb7-2821d2b328d7-o2ju6h font-class-1">
+                        <div class="a2551441291-01a9ac4a-5bea-402d-8ea3-1a903139c1b2-BvknBt font-class-1">
                             2551441291
                         </div>
-                        <img anima-src="{%static '/img/rectangle-112-1@1x.png' %}" class="rectangle-112-520fc646-c291-4fcf-b51c-309a4aeda3cd-QLQqBE" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                        <div class="a04-may-2020-c8b7d929-d879-40c5-a090-1a41074e8a65-5jofcm font-class-1">
+                        <img anima-src="{% static 'img/rectangle-112-1@1x.png' %}" class="rectangle-112-e69843a1-52a9-44ef-ac11-63df40227626-KIDaVW" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                        <div class="a04-may-2020-94663776-5b36-4bb8-adaf-315563e91275-ysoq56 font-class-1">
                             04 MAY 2020
                         </div>
-                        <div class="student-loan-53130709-ce6b-4db1-84e9-c55f17a38bed-4YA2lE font-class-1">
+                        <div class="student-loan-42a03c9e-750b-4b7a-a71b-a433fccd2540-NHeHNq font-class-1">
                             STUDENT LOAN
                         </div>
-                        <div class="approved-c8b3e874-ea21-42f3-aa26-1c7e52a56e7a-cmD1Wi font-class-1">
+                        <div class="approved-4a86594d-0dbc-472e-93dc-7fe84960ba59-A0QEIS font-class-1">
                             APPROVED
                         </div>
-                        <div class="loan-will-be-disbursed-after-the-documents-below-are-signed-d35db91c-0737-4fb5-b515-5d67b93e9c91-1ZBTHe font-class-1">
+                        <div class="loan-will-be-disbursed-after-the-documents-below-are-signed-316d29c3-cc64-482c-8b5e-b32bc7de3d2f-FaBWUT font-class-1">
                             Loan will be disbursed after the <br />documents below are signed:
                         </div>
                     </div>
                 </div>
-                <div class="loans-9be77e52-7b2b-4650-95aa-97b71f96f18e-OlTXQ6 font-class-1">
+                <div class="loans-2249f816-38ac-40ff-af59-6d44125b20d1-xZv1FE font-class-1">
                     LOANS
                 </div>
-                <img anima-src="{%static '/img/line-10-1@1x.png' %}" class="line-10-41dd19c4-226e-4a82-9801-12caf0829066-RLjmUP" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                <a href="letteroffer"><div class="letter-of-offer-0153ca44-1376-46ce-8f93-446f911d03f3-gvG73z font-class-1">
+                <img anima-src="{% static 'img/line-10-1@1x.png' %}" class="line-10-05b5f33d-f02d-4c50-898c-d22f6bfbf82f-gzELR6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                <div class="letter-of-offer-3581494a-445e-43e1-9d87-dd2242eb1ba9-uEbHe1 font-class-1">
                     Letter of Offer
-                </div></a>
-                <div class="terms-and-conditions-3327ef03-baa5-4e6e-8a11-1fc4c6363cf4-uifvC2 font-class-1">
+                </div>
+                <div class="terms-and-conditions-09f89c45-3c5c-476e-8ee0-3449c169d5cb-D58oiA font-class-1">
                     Terms and Conditions
+                </div>
+                <img anima-src="{% static 'img/ellipse-18@1x.png' %}" class="ellipse-18-57d601bf-8ce1-48b2-bbed-55c3233c2aaa-ebKg1q" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                <div class="group-107-5ac8c078-247f-4975-8310-f09f0fd2cc8a-1ZcgAp">
+                    <img anima-src="{% static 'img/path-998@1x.png' %}" class="path-998-511955ad-222c-476a-9e60-b453af694ae8-2HEyay" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+                    <img anima-src="{% static 'img/path-997@1x.png' %}" class="path-997-814a52f2-57da-4907-a58c-518cf03b7549-yzOe0u" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                 </div>
             </div>
         </div>
