--- a/project_zobo/project_zobo/templates/loanappcomplete.html
+++ b/project_zobo/project_zobo/templates/loanappcomplete.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {% load static %}<link href="{%static '/img/favicon.png' %" rel="shortcut icon"/>
+        {% load static %}<link href="{%static '/img/favicon.png' %}" rel="shortcut icon"/>
         <meta charset="utf-8"/>
         <meta content="width=1440, maximum-scale=1.0" name="viewport"/>
-        <link href="{%static '/css/loanappcomplete.css'%" rel="stylesheet" type="text/css"/>
+        <link href="{%static '/css/loanappcomplete.css'%}" rel="stylesheet" type="text/css"/>
         <meta content="AnimaApp.com - Design to code, Automated." name="author">
         </meta>
     </head>
@@ -71,7 +71,7 @@
                     <div class="upload-document-48c54017-bb7a-4fd7-b44d-8a01072ddb0e-J2o4u2 font-class-1">
                         Upload Document
                     </div>
-                    <a href="loansubmit.html">
+                    <a href="loansubmit">
                         <div class="group-12-c1d018e5-6f31-454f-b22d-4982c77f1325-iRmZwz anima-flexbox-container">
                             <div class="group-85-8e3d1cc5-3f2c-4979-b1ed-1b75d5271b60-v0ui5c">
                                 <img anima-src="{%static '/img/path-13-5@1x.png' %}" class="path-13-8222bb0c-e1e6-4c6b-a0fe-a8776ef4dbf2-ps4T9h" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="group-100-84a2fd17-8006-4a48-9489-f727c8059d07-nSPsAR anima-flexbox-container">
                     <div class="auto-flex3-1cPmnw anima-flexbox-container">
-                        <a href="myaccount.html">
+                        <a href="myaccount">
                             <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-21114989-2542-4d31-adbc-d2366c1444ab-B838OA" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </a>
                         <div class="chrislim63-5dfc2faa-5b90-418c-aa39-f44e33011fc6-2RPzwe font-class-1">
