--- a/project_zobo/project_zobo/templates/makepayment.html
+++ b/project_zobo/project_zobo/templates/makepayment.html
@@ -19,7 +19,7 @@
                         <div class="down-icon-21526087-0528-478f-bdbc-87f343870f65-PxeaPW anima-flexbox-container">
                             <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-bf60f60d-54d5-4f48-83de-5f00bf592d4b-sAIn6P anima-smart-layers-pointers " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </div>
-                        <a href="dashboard.html">
+                        <a href="dashboard">
                             <div class="return-to-dashboard-7fc05fea-763c-49f7-bbee-639eecdb9209-lY5ClL font-class-1">
                                 Return to Dashboard
                             </div>
@@ -42,7 +42,7 @@
                     <div class="group-11-b864d633-7df4-4da6-be7e-cca4597e0ad8-oDIflV anima-flexbox-container">
                         <div class="group-100-9dc538ea-bfd6-41f2-89bf-a96492e80ee9-PqDMuO anima-flexbox-container">
                             <div class="auto-flex1-5vP04h anima-flexbox-container">
-                                <a href="myaccount.html">
+                                <a href="myaccount">
                                     <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-bf57a544-04ae-43a2-ac1d-7ceb38fd43fd-fSEWUZ" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                                 </a>
                                 <div class="chrislim63-248d6a01-02a9-46b6-a68e-79ab4ba7da1a-FIYM5E font-class-1">
