--- a/project_zobo/project_zobo/templates/myaccount.html
+++ b/project_zobo/project_zobo/templates/myaccount.html
@@ -30,7 +30,7 @@
                 <img anima-src="{%static '/img/razer-logo-10@1x.png' %}" class="razer-logo-51d1bb3d-09c7-461c-b4b4-273c6333f5f6-cr4isk" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                 <div class="group-92-8fdf42c4-5cca-403d-8432-e122cdbb0a28-34YiVs anima-flexbox-container">
                     <div class="auto-flex2-pxpHEW anima-flexbox-container">
-                        <a class="align-self-flex-start" href="dashboard.html">
+                        <a class="align-self-flex-start" href="dashboard">
                             <div class="group-86-524b07a0-686a-4228-aae0-0955535bb0d4-ys1m4d anima-smart-layers-pointers ">
                                 <div class="down-icon-975a37ec-4e6a-474c-8340-f972907ed68c-PGqJWW anima-flexbox-container">
                                     <img anima-src="{%static '/img/bx-chevron-down-17@1x.png' %}" class="bx-chevron-down-f748117f-9c27-45be-a110-1140dedd85f4-2fJvxM anima-flexbox-container" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
@@ -38,7 +38,7 @@
                             </div>
                         </a>
                         <div class="auto-flex-hxJhfv anima-flexbox-container">
-                            <a href="dashboard.html">
+                            <a href="dashboard">
                                 <div class="return-to-dashboard-74d8f210-8a0b-4a68-9bb3-513213d5798b-isgItT font-class-1">
                                     Return to Dashboard
                                 </div>
@@ -143,7 +143,7 @@
                             Disbursed
                         </div>
                         <img anima-src="{%static '/img/path-993@1x.png' %}" class="path-995-f47022bf-9d01-487f-8822-b75418da5001-tKjW0a" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                        <div class="loan-details-f624799d-387f-4b52-8587-75a8294d6001-k45KMW font-class-1">
+                        <a href = ""<div class="loan-details-f624799d-387f-4b52-8587-75a8294d6001-k45KMW font-class-1">
                             Loan Details
                         </div>
                         <div class="what-does-this-mean-0d16618a-24e0-4334-b4bf-964d6e8670b5-QaXLPr font-class-1">
@@ -176,7 +176,7 @@
                         <div class="sgd-500-00-b2ec0339-ddf1-4d5c-b1f6-09021a5bd1bd-TZmtdV font-class-1">
                             SGD 500.00
                         </div>
-                        <a href="makepayment.html">
+                        <a href="makepayment">
                             <div class="buttons-contained-enabled-292292f3-00cd-47fe-99b2-74f7961f113c-pPG76T anima-flexbox-container">
                                 <div class="group-89-59f961c3-ead7-4a70-8ba9-c2b04101638a-uUITLk">
                                     <img anima-src="{%static '/img/rectangle-377-3@1x.png' %}" class="rectangle-377-fade9e98-3e54-447f-bbc9-aa896413d396-PyAnQy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
@@ -186,7 +186,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="makepayment.html">
+                        <a href="makepayment">
                             <div class="buttons-contained-enabled-628b4d20-f076-454b-97f1-72bb9d4392c6-TmUxjf anima-flexbox-container">
                                 <div class="group-89-20783dd0-288f-431c-928b-a875cf03fe9f-5fxnvA">
                                     <img anima-src="{%static '/img/rectangle-377-3@1x.png' %}" class="rectangle-377-67128edb-28d9-40ed-a86d-c3a3c1907e2e-FkbxBR" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
