--- a/project_zobo/project_zobo/templates/myinfomessage.html
+++ b/project_zobo/project_zobo/templates/myinfomessage.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="group-100-a50dd318-9995-4c48-9071-c3014aed48a3-cJIxD3 anima-flexbox-container">
                     <div class="auto-flex-VFtbzM anima-flexbox-container">
-                        <a href="myaccount.html">
+                        <a href="myaccount">
                             <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-5f98a5ea-0c8f-4049-b084-f04fbf5a9b88-xKtUam" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                         </a>
                         <div class="chrislim63-b845c109-74b9-473e-8b13-1dc7703b9176-KVmtvc font-class-1">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="rectangle-607-a7719e24-bf13-4039-9de6-ad365f03d1a8-o3hb1y">
                 </div>
-                <a href="loanappcomplete.html">
+                <a href="loanappcomplete">
                     <img anima-src="{%static '/img/myinfo-3@1x.png' %}" class="my-info-3-cd6d3583-f40d-4b18-b299-6ae60d218ceb-oipKLo" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                 </a>
             </div>
