--- a/project_zobo/project_zobo/templates/registersuccess.html
+++ b/project_zobo/project_zobo/templates/registersuccess.html
@@ -14,10 +14,10 @@
         <div class="anima-container-center-horizontal">
             <div class="registersuccess anima-flexbox-container anima-screen ">
                 <div class="auto-flex-1lKxzb anima-flexbox-container">
-                    <a class="align-self-flex-end" href="homepage.html">
+                    <a class="align-self-flex-end" href="homepage">
                         <img anima-src="{%static '/img/razer-logo-10@1x.png' %}" class="razer-logo-ca7bcfa9-a910-42fc-9bef-df0cba8f9b63-fH9NZe" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
-                    <a href="homepage.html">
+                    <a href="homepage">
                         <div class="group-10-54f99f0c-ff10-421a-a33a-fa8cb11f12ac-fFjfGE anima-flexbox-container">
                             <div class="discover-b5e1da29-922a-461d-8b1a-dc2f936788cc-e6nOZm font-class-1">
                                 Discover
@@ -47,7 +47,7 @@
                     <div class="register-8daf394f-7253-464f-be03-7f16a2a7197e-BHacRy font-class-1">
                         REGISTER
                     </div>
-                    <a href="login.html">
+                    <a href="login">
                         <div class="log-in-a44e4c43-c62f-4fb3-b46e-7deb355d93f2-uoi8Vo font-class-1">
                             LOG IN
                         </div>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="verifylogin.html">
+                    <a href="verifylogin">
                         <div class="buttons-contained-enabled-595da512-7240-4b3c-8e01-0f25ffa7d443-LqHCKF anima-smart-layers-pointers ">
                             <img anima-src="{%static '/img/rectangle-377-1@1x.png' %}" class="rectangle-377-23ae791b-0bf2-43a1-838a-01753e82b294-qQmq19" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             <div class="confirm-d6e64d95-7661-45d1-9515-c0dc4be90a72-mfAs53 font-class-5">
