--- a/project_zobo/project_zobo/templates/verifyloginmobile.html
+++ b/project_zobo/project_zobo/templates/verifyloginmobile.html
@@ -32,7 +32,7 @@
                     <div class="group-11-57d8f99e-febb-4ed4-a74d-4862df7a699b-Dyn3Ej anima-flexbox-container">
                         <div class="group-100-77ed7c7e-6fd9-4644-8a9b-559b22207430-PxCGvs anima-flexbox-container">
                             <div class="auto-flex1-JVB4Qu anima-flexbox-container">
-                                <a href="myaccount.html">
+                                <a href="myaccount">
                                     <img anima-src="{%static '/img/ellipse-17-10@1x.png' %}" class="ellipse-17-b40eabfe-deed-4b83-ae3f-87a21b66a235-xKmRcp" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                                 </a>
                                 <div class="chrislim63-2136ad96-96aa-4aff-9d0e-ea0ae9bde310-PUqcfI font-class-1">
@@ -62,7 +62,7 @@
                 <div class="overlap-group2-BPkGKm">
                     <div class="group-91-6696ed58-41a2-4ffe-bd24-350f3098608e-7YJFCy anima-flexbox-container">
                         <div class="group-90-dd0f0aa7-485a-46b3-8d4c-379494ba2e4a-RmSXlj">
-                            <a href="myaccount.html">
+                            <a href="myaccount">
                                 <img anima-src="{%static '/img/rectangle-104-1@1x.png' %}" class="rectangle-104-17007e6b-1f25-417a-9050-e4ed934ad29c-q4DVSy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             </a>
                             <div class="group-101-82a6ac89-a264-458f-b31c-eebabbf06153-AHKwXU">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="dashboard.html">
+                    <a href="dashboard">
                         <div class="buttons-contained-enabled-d42e9611-c971-4b37-8010-d4635bd1c44e-wCgaOV">
                             <img anima-src="{%static '/img/rectangle-377-6@1x.png' %}" class="rectangle-377-6e2a7a8a-8fdf-4fcd-944d-ce84ca2e650b-3K4dit" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                             <div class="confirm-6a77fdc1-d864-4f19-bf4b-bb23d9024b63-v09bSy font-class-5">
